# genai-icebreaker

./: icebreaker.py  pyproject.toml
