[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["Somil-Gupta <somil2760@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.1"
openai = "^1.9.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
